# 2024-cpl-coding-6

./: .gitignore  CMakeLists.txt  LICENSE  README.md  guess.c  hello.c
0-intro/: CMakeLists.txt  guess.c  hello.c
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere  sphere.c
10-function-pointers/: CMakeLists.txt  atexit.c  bsearch-gnuc.c  bsearch.c  decl.c  integrate.c  signal.c  sort.c
11-struct/: CMakeLists.txt  README.md  admin.c  musician.c  offset  offset.c  sds-202412.c  sds.c
12-linked-list/: CMakeLists.txt  josephus  josephus.c
12-linked-list/ll/: ll.c  ll.h
13-recursion/: CMakeLists.txt  README.md  bsearch-iter.c  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-iter.c  gcd-re.c  hilbert-curve-text.c  hilbert-curve-ui.c  main-re.c  merge.c  mergesort-re.c  min-re.c  min.c  n-queens.c  sum-re.c
2-if-for-array/: leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  binary-search-for.c  binary-search.c  digits-do-while.c  digits-for.c  digits-while.c  palindrome.c  primes.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  README.md  binary-insertion-sort.c  game-of-life  game-of-life-chatgpt.c  game-of-life.c  insertion-sort-bsearch.c  insertion-sort.c  merge.c
5-function/: CMakeLists.txt  binary-insertion-sort.c  binary-search.c  game-of-life-transformed.c  game-of-life.c  leap.c  merge.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
6-data-types/: CMakeLists.txt  assoc-float.c  char.c  compare.c  exact-width.c  explict-conversion.c  float-assoc.c  float-limits.c  for-unsigned.c  implicit-conversion.c  int-limits.c  integer-promotion.c  loop.c  precision.c  signed-overflow-fix.c  size  size.c  sizet.c  sum-product.c  timing-primes.c  unsigned-wrap-fix.c  unsigned-wrap.c  unsigned.c
7-pointers-arrays/: CMakeLists.txt  pointer-array.c  pointer-const.c  pointer.c  selection-sort.c
8-pointers-c-strings/: CMakeLists.txt  str-literals.c  strcat.c  strcmp.c  strcpy.c  strlen.c
9-double-pointers/: CMakeLists.txt  decl.c  echo  echo.c  pointers-malloc.c  scores.c  selection-sort-strings.c  selection-sort.c
