cmake_minimum_required(VERSION 3.25)
project(2024-cpl-coding-6 C)

set(CMAKE_C_STANDARD 17)

add_subdirectory(0-intro)
add_subdirectory(1-types-io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-a-while)
add_subdirectory(4-loops)
add_subdirectory(5-function)
add_subdirectory(6-data-types)
add_subdirectory(7-pointers-arrays)
add_subdirectory(8-pointers-c-strings)
add_subdirectory(9-double-pointers)