add_executable(main-re main-re.c)

add_executable(min min.c)

add_executable(min-re min-re.c)
add_executable(sum-re sum-re.c)

add_executable(fib-re fib-re.c)
add_executable(fib-iter fib-iter.c)
add_executable(fib-array fib-array.c)

add_executable(gcd-re gcd-re.c)
add_executable(gcd-iter gcd-iter.c)

add_executable(bsearch-iter bsearch-iter.c)
add_executable(bsearch-re bsearch-re.c)

add_executable(merge-array merge.c)
add_executable(mergesort-re mergesort-re.c)

add_executable(n-queens n-queens.c)

add_executable(hilbert-curve-text hilbert-curve-text.c)
#add_executable(hilbert-curve-ui hilbert-curve-ui.c)