add_executable(game-of-life game-of-life.c)
add_executable(game-of-life-chatgpt game-of-life-chatgpt.c)

add_executable(insertion-sort insertion-sort.c)
add_executable(insertion-sort-bsearch insertion-sort-bsearch.c)
add_executable(binary-insertion-sort binary-insertion-sort.c)

add_executable(merge merge.c)